--- a/nuxeo-dynamic-asset-transformation-core/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-core/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>nuxeo-platform-imaging-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-video</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.nuxeo.runtime</groupId>
             <artifactId>nuxeo-runtime-test</artifactId>
             <scope>test</scope>
