--- a/nuxeo-dynamic-asset-transformation-docker/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-docker/pom.xml
@@ -71,7 +71,7 @@
               <tag>${project.version}</tag>
               <pullNewerImage>false</pullNewerImage>
               <buildArgs>
-                <BASE_IMAGE>docker-private.packages.nuxeo.com/nuxeo/nuxeo:${nuxeo.platform.version}</BASE_IMAGE>
+                <BASE_IMAGE>docker-private.packages.nuxeo.com/nuxeo/nuxeo:2021.15</BASE_IMAGE>
                 <BUILD_TAG>latest</BUILD_TAG>
                 <SCM_REF>built-locally</SCM_REF>
                 <VERSION>${project.version}</VERSION>
