Upgrade to LTS2023

--- a/conf.d/00-docker.conf
+++ b/conf.d/00-docker.conf
@@ -8,6 +8,12 @@
 ## This is achieved by using the same percentage for InitialRAM as for MaxRAM, resulting in equal Xms and Xmx which is recommended in production.
 #JAVA_OPTS=$JAVA_OPTS -XX:InitialRAMPercentage=50 -XX:MaxRAMPercentage=50
 
+nuxeo.append.templates.my=default,mongodb
+nuxeo.mongodb.server=mongodb:27017
+elasticsearch.clusterName=docker-cluster
+elasticsearch.addressList=http://opensearch:9200
+elasticsearch.httpReadOnly.baseUrl=http://opensearch:9200
+
 transform.cdn.protocol=http
 nuxeo.s3storage.cloudfront.distribDomain=localhost:8080
 transform.cdn.path=/nuxeo/site/public/transform
