--- a/nuxeo-dynamic-asset-transformation-public-endpoint/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-public-endpoint/pom.xml
@@ -6,32 +6,25 @@
     <parent>
         <groupId>org.nuxeo.labs.asset.transformation</groupId>
         <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
-        <version>2021.13.0-SNAPSHOT</version>
+        <version>2023.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>nuxeo-dynamic-asset-transformation-public-endpoint</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.nuxeo.ecm.platform</groupId>
-            <artifactId>nuxeo-platform-imaging-core</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.nuxeo.ecm.webengine</groupId>
             <artifactId>nuxeo-webengine-core</artifactId>
-            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.nuxeo.labs.asset.transformation</groupId>
             <artifactId>nuxeo-dynamic-asset-transformation-core</artifactId>
+            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.nuxeo.labs.public.link</groupId>
             <artifactId>nuxeo-public-download-link-core</artifactId>
-            <version>2021.5.0-SNAPSHOT</version>
+            <version>2023.0.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -60,12 +53,7 @@
             <artifactId>nuxeo-platform-tag</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.nuxeo.ecm.platform</groupId>
-            <artifactId>nuxeo-platform-imaging-core</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
 </project>
