--- a/nuxeo-dynamic-asset-transformation-rest-api/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-rest-api/pom.xml
@@ -16,26 +16,32 @@
         <dependency>
             <groupId>org.nuxeo.ecm.core</groupId>
             <artifactId>nuxeo-core-io</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-platform-web-common</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.automation</groupId>
             <artifactId>nuxeo-automation-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-rest-api-server</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-rest-api-io</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.labs.asset.transformation</groupId>
@@ -69,7 +75,12 @@
             <artifactId>nuxeo-rest-api-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
