--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8787
       - NUXEO_DEV=true
-      - NUXEO_PACKAGES=marketplace-disable-studio-snapshot-validation
+      - NUXEO_PACKAGES=nuxeo-web-ui marketplace-disable-studio-snapshot-validation
       - NUXEO_CLID=${NUXEO_CLID}
     volumes:
       - ./conf.d:/etc/nuxeo/conf.d
