--- a/nuxeo-dynamic-asset-transformation-docker/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-docker/pom.xml
@@ -11,6 +11,19 @@
   <name>Nuxeo dynamic asset transformation docker</name>
   <packaging>pom</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.nuxeo.labs.asset.transformation</groupId>
+      <artifactId>nuxeo-dynamic-asset-transformation-package</artifactId>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.labs.asset.transformation</groupId>
+      <artifactId>nuxeo-dynamic-asset-transformation-aws-package</artifactId>
+      <type>pom</type>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
@@ -55,29 +68,32 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>com.spotify</groupId>
-            <artifactId>dockerfile-maven-plugin</artifactId>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>0.42.1</version>
             <executions>
               <execution>
-                <id>default</id>
                 <goals>
                   <goal>build</goal>
                   <goal>tag</goal>
+                  <goal>push</goal>
                 </goals>
               </execution>
             </executions>
             <configuration>
-              <repository>nuxeo-dynamic-asset-transformation</repository>
-              <tag>${project.version}</tag>
-              <pullNewerImage>false</pullNewerImage>
-              <buildArgs>
-                <BASE_IMAGE>docker-private.packages.nuxeo.com/nuxeo/nuxeo:2021.15</BASE_IMAGE>
-                <BUILD_TAG>latest</BUILD_TAG>
-                <SCM_REF>built-locally</SCM_REF>
-                <VERSION>${project.version}</VERSION>
-                <NUXEO_CLID>${env.NUXEO_CLID}</NUXEO_CLID>
-                <PACKAGES>nuxeo-web-ui</PACKAGES>
-              </buildArgs>
+              <images>
+                <image>
+                  <name>nuxeo-dynamic-asset-transformation:${project.version}</name>
+                  <build>
+                    <args>
+                      <BASE_IMAGE>docker-private.packages.nuxeo.com/nuxeo/nuxeo:${nuxeo.platform.version}</BASE_IMAGE>
+                      <BUILD_TAG>${project.version}</BUILD_TAG>
+                      <SCM_REF>built-locally</SCM_REF>
+                    </args>
+                    <contextDir>${project.basedir}</contextDir>
+                  </build>
+                </image>
+              </images>
             </configuration>
           </plugin>
         </plugins>
