--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - mongodb_data:/data/db
   opensearch:
-    image: opensearchproject/opensearch:1.3.7
+    image: opensearchproject/opensearch:1.3.11
     hostname: opensearch
     ports:
       - "9200:9200"
@@ -19,7 +19,7 @@ services:
     volumes:
       - "search_data:/usr/share/opensearch/data"
   nuxeo:
-    image: nuxeo-dynamic-asset-transformation:2023.0.0-RC1
+    image: nuxeo-dynamic-asset-transformation:2023.1.0-SNAPSHOT
     ports:
       - "8080:8080"
       - "8787:8787"
