--- a/nuxeo-dynamic-asset-transformation-core/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.nuxeo.labs.asset.transformation</groupId>
         <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
-        <version>2023.0.0-SNAPSHOT</version>
+        <version>2023.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>nuxeo-dynamic-asset-transformation-core</artifactId>
     <name>Nuxeo dynamic asset transformation core</name>
@@ -16,22 +16,27 @@
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-platform-commandline-executor</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.core</groupId>
             <artifactId>nuxeo-core-convert-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.automation</groupId>
             <artifactId>nuxeo-automation-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-platform-video</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.runtime</groupId>
