--- a/nuxeo-dynamic-asset-transformation-public-endpoint/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-public-endpoint/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.nuxeo.labs.asset.transformation</groupId>
         <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
-        <version>2023.0.0-SNAPSHOT</version>
+        <version>2023.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>nuxeo-dynamic-asset-transformation-public-endpoint</artifactId>
@@ -15,6 +15,12 @@
         <dependency>
             <groupId>org.nuxeo.ecm.webengine</groupId>
             <artifactId>nuxeo-webengine-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.nuxeo.labs.asset.transformation</groupId>
@@ -24,7 +30,7 @@
         <dependency>
             <groupId>org.nuxeo.labs.public.link</groupId>
             <artifactId>nuxeo-public-download-link-core</artifactId>
-            <version>2023.0.0</version>
+            <version>2023.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -46,6 +52,12 @@
         <dependency>
             <groupId>org.nuxeo.ecm.platform</groupId>
             <artifactId>nuxeo-rest-api-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
