Upgrade to LTS2025

--- a/nuxeo-dynamic-asset-transformation-docker/Dockerfile
+++ b/nuxeo-dynamic-asset-transformation-docker/Dockerfile
@@ -16,9 +16,12 @@ LABEL com.customer.sample.build-tag=${BUILD_TAG}
 # We need to be root to run yum commands
 USER 0
 
-RUN dnf config-manager --set-enabled crb && dnf -y install epel-release && \
-    dnf -y install https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm && \
-    dnf -y install ffmpeg mediainfo x264 x265
+# Install repos
+RUN dnf -y install epel-release && dnf -y install https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm && dnf -y install https://rpms.remirepo.net/enterprise/remi-release-9.rpm
+RUN dnf config-manager --enable ol9_codeready_builder
+
+#Install ffmpeg and codecs
+RUN dnf -y install mediainfo ffmpeg x264 x265 opus libvpx flac libvorbis-devel
 
 # Set back original (nuxeo) user
 USER 900
