--- a/nuxeo-dynamic-asset-transformation-core/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-core/pom.xml
@@ -1,16 +1,13 @@
-<?xml version="1.0"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.nuxeo.labs.asset.transformation</groupId>
         <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
-        <version>2023.2.0-SNAPSHOT</version>
+        <version>2025.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>nuxeo-dynamic-asset-transformation-core</artifactId>
     <name>Nuxeo dynamic asset transformation core</name>
-    <description></description>
+    <description/>
 
     <dependencies>
         <dependency>
@@ -38,16 +35,7 @@
             <artifactId>nuxeo-platform-video</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.nuxeo.runtime</groupId>
-            <artifactId>nuxeo-runtime-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.nuxeo.ecm.platform</groupId>
-            <artifactId>nuxeo-platform-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.nuxeo.ecm.automation</groupId>
             <artifactId>nuxeo-automation-test</artifactId>
@@ -63,6 +51,40 @@
             <artifactId>nuxeo-platform-imaging-core</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-binary-metadata</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-io-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-preview-core</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-filemanager</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-rendition-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-rendition-core</artifactId>
+            <type>test-jar</type>
         </dependency>
     </dependencies>
 
