--- a/nuxeo-dynamic-asset-transformation-rest-api/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-rest-api/pom.xml
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.nuxeo.labs.asset.transformation</groupId>
         <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
-        <version>2023.2.0-SNAPSHOT</version>
+        <version>2025.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -80,6 +77,40 @@
             <artifactId>nuxeo-platform-imaging-core</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-binary-metadata</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-io-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-preview-core</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-filemanager</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-rendition-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- needed for ImagingFeature -->
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-rendition-core</artifactId>
+            <type>test-jar</type>
         </dependency>
 
     </dependencies>
