--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,23 @@
-<?xml version="1.0"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-parent</artifactId>
-    <version>2023.13</version>
+    <version>2023.27</version>
   </parent>
-
   <groupId>org.nuxeo.labs.asset.transformation</groupId>
   <artifactId>nuxeo-dynamic-asset-transformation-parent</artifactId>
   <version>2023.2.0-SNAPSHOT</version>
   <name>Nuxeo dynamic asset transformation parent</name>
-  <description />
+  <description/>
   <packaging>pom</packaging>
-
   <properties>
     <!-- Skip Nuxeo enforcer rules by default -->
     <nuxeo.skip.enforcer>true</nuxeo.skip.enforcer>
     <nuxeo.target.version>2023.*</nuxeo.target.version>
     <skipDocker>false</skipDocker>
+    <pushReleaseChanges>false</pushReleaseChanges>
   </properties>
-
   <modules>
     <module>nuxeo-dynamic-asset-transformation-core</module>
     <module>nuxeo-dynamic-asset-transformation-package</module>
@@ -31,15 +27,17 @@
     <module>nuxeo-dynamic-asset-transformation-aws-package</module>
     <module>nuxeo-dynamic-asset-transformation-docker</module>
   </modules>
-
-  <scm />
-  <licenses />
-  <mailingLists />
-  <issueManagement />
-  <ciManagement />
-  <developers />
-  <distributionManagement />
-
+  <scm>
+    <connection>scm:git:${project.scm.url}</connection>
+    <developerConnection>scm:git:${project.scm.url}</developerConnection>
+    <url>https://github.com/nuxeo-sandbox/nuxeo-dynamic-asset-transformation</url>
+  </scm>
+  <licenses/>
+  <mailingLists/>
+  <issueManagement/>
+  <ciManagement/>
+  <developers/>
+  <distributionManagement/>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -81,7 +79,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
   <repositories>
     <repository>
       <id>maven-public</id>
@@ -105,8 +102,14 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/nuxeo-sandbox/nuxeo-public-download-link</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
-
   <pluginRepositories>
     <pluginRepository>
       <id>maven-public</id>
@@ -119,5 +122,29 @@
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.1.1</version>
+        <configuration>
+          <projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
+          <tagNameFormat>@{project.version}</tagNameFormat>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <scmReleaseCommitComment>Release @{releaseLabel}</scmReleaseCommitComment>
+          <scmDevelopmentCommitComment>Post Release @{releaseLabel}</scmDevelopmentCommitComment>
+          <pushChanges>${pushReleaseChanges}</pushChanges>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.18.0</version>
+        <configuration>
+          <ruleSet/>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
