--- a/nuxeo-dynamic-asset-transformation-core/pom.xml
+++ b/nuxeo-dynamic-asset-transformation-core/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>nuxeo-platform-tag</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.nuxeo.ecm.platform</groupId>
+            <artifactId>nuxeo-platform-imaging-core</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
